istio-1.30.3/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: ledger-gateway
  namespace: payments

spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS

    tls:
      mode: SIMPLE
      credentialName: ledger-cert

    hosts:
    - ledger.local
