istio-1.30.3/ledger-canary-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: ledger-canary
  namespace: payments

spec:

  hosts:
  - ledger-api

  http:

  - route:

    - destination:
        host: ledger-api
        subset: v1
      weight: 90

    - destination:
        host: ledger-api
        subset: v2
      weight: 10
