istio-1.30.3/allow-ingress.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: allow-ingress-gateway
  namespace: payments

spec:

  selector:
    matchLabels:
      app: ledger-api

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
