istio-1.30.3/allow-neighbour.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: allow-neighbour
  namespace: payments

spec:

  selector:
    matchLabels:
      app: ledger-api

  action: ALLOW

  rules:

  - from:

    - source:

        principals:

        - cluster.local/ns/payments/sa/neighbour-sa
