istio-1.30.3/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: deny-all
  namespace: payments

spec: {}
