istio-1.30.3/networkpolicy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: payments

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress
